--- a/gb/19/3/24/n11136070.md
+++ b/gb/19/3/24/n11136070.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kimqea257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kimqea257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kimqea257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kimqea257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kimqea257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kimqea257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kimqea257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kimqea257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kimqea257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kimqea257/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kimqea257/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kimqea257/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kimqea257/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>科博馆首登“世界科学祭”  澳洲民众惊叹台湾真美</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>科博馆首登“世界科学祭” 澳洲民众惊叹台湾真美</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/03/4d0ffb94765753280ff1b2d2eac4b5de-600x400.jpg" />
 <h6>科博馆在澳洲世界科学祭现场带领民众彩绘石虎。（科博馆提供）
 </h6>
 <hr>
-<p>【大纪元2019年03月24日讯】（大纪元记者赖瑞台湾台中报导）台湾团队走向国际又添一例！“世界科学祭”(World Science Festival) 日前在<ahref="https://github.com/kimqea257/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E5%B8%83%E9%87%8C%E6%96%AF%E6%9C%AC.md#1">澳洲布里斯本</a>登场，台中<ahref="https://github.com/kimqea257/djy/blob/master/gb/tag/%E7%A7%91%E5%8D%9A%E9%A6%86.md#1">科博馆</a>团队是本届科学祭唯一受邀的亚洲团队，吸引大批澳洲、印尼、日本、尼泊尔等民众，体验科博馆带来的科学演示与澎湖蓝洞VR，科博馆除了现场演示火箭车与万花筒、带民众彩绘石虎活动，也介绍台湾保育动物与科学展览，更把握机会推广台湾自然与人文之美，澳洲民众盛赞台湾真是个美丽的岛屿，一定会找时间到台湾一游。</p>
-<p>策划人<ahref="https://github.com/kimqea257/djy/blob/master/gb/tag/%E7%A7%91%E5%8D%9A%E9%A6%86.md#1">科博馆</a>助理研究员王斌威表示，澳洲与台湾的地形地貌差异不小，台湾的地震等天然灾害，在澳洲是比较难感受的，而台湾更因为需与灾害共存，在科技的发展上有一定成就，这次科学祭即展现台湾的独一无二，从关怀土地的角度看待世界。科博馆团队这次结合馆内展览与历年研究，跟大家介绍澎湖蓝洞等台湾独特地形地貌、原住民文化、保育动物石虎等，让世界看见美丽的台湾。科博馆副馆长周文豪指出，澎湖蓝洞是千万年的地质圣殿，我们用蓝洞跟世界打招呼！</p>
+<p>【大纪元2019年03月24日讯】（大纪元记者赖瑞台湾台中报导）台湾团队走向国际又添一例！“世界科学祭”(World Science Festival) 日前在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E5%B8%83%E9%87%8C%E6%96%AF%E6%9C%AC.md#1">澳洲布里斯本</a>登场，台中<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%91%E5%8D%9A%E9%A6%86.md#1">科博馆</a>团队是本届科学祭唯一受邀的亚洲团队，吸引大批澳洲、印尼、日本、尼泊尔等民众，体验科博馆带来的科学演示与澎湖蓝洞VR，科博馆除了现场演示火箭车与万花筒、带民众彩绘石虎活动，也介绍台湾保育动物与科学展览，更把握机会推广台湾自然与人文之美，澳洲民众盛赞台湾真是个美丽的岛屿，一定会找时间到台湾一游。</p>
+<p>策划人<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%91%E5%8D%9A%E9%A6%86.md#1">科博馆</a>助理研究员王斌威表示，澳洲与台湾的地形地貌差异不小，台湾的地震等天然灾害，在澳洲是比较难感受的，而台湾更因为需与灾害共存，在科技的发展上有一定成就，这次科学祭即展现台湾的独一无二，从关怀土地的角度看待世界。科博馆团队这次结合馆内展览与历年研究，跟大家介绍澎湖蓝洞等台湾独特地形地貌、原住民文化、保育动物石虎等，让世界看见美丽的台湾。科博馆副馆长周文豪指出，澎湖蓝洞是千万年的地质圣殿，我们用蓝洞跟世界打招呼！</p>
 <p>现场演示人员王宝晶、庄舒云、高依虹于活动期间，寓教于乐讲解牛顿运动定律，教当地民众自制火箭车、万花筒等科学教具，更搭配赠送科博馆吉祥物百合布比小礼与馆内办过的太阳系展览小物，受到澳洲民众热烈回响。演示团队表示，希望能将台湾民众参与活动的喜悦传递到澳洲，让当地感受到台湾推广科普教育的热情。</p>
-<figure id="attachment_11136075" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/03/305b8ad6e2436191b16e11dabdc98b4d.jpg"><img class="wp-image-11136075 size-large" src="https://i.epochtimes.com/assets/uploads/2019/03/305b8ad6e2436191b16e11dabdc98b4d-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">澳洲街头艺人与小朋友一起玩科博馆的火箭车教具。（科博馆提供）</figcaption></figure>
 <p>“世界科学祭”(WSF) 于2008年始创于美国纽约，由非营利性的世界科学基金会（World Science? Foundation）发起，是一个纯科技创新展示和交流的活动周，并融合了音乐、艺术等元素，目的是让神秘的科技发明走出实验室，走进社区，让更多的人了解科技，吸引更多的人投入到科技创新的浪潮中。台中科博馆长期致力于科普教育推广，推出的科学教育方式日益多元，不只是在台湾办理展览与活动，也积极走向国际，足迹踏向世界，本次科博馆首度参与WSF，希望能让世界看到台湾科学教育的能量。</p>
 <p>责任编辑：玉珍</p>
 
@@ -17,42 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/16/1/19/n4620596.md#1">澳洲布里斯本华人聚居区房价强劲增长</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/16/3/24/n7442297.md#1">澳洲布里斯本一儿童医院爆发诺瓦克病毒</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/18/4/11/n10294139.md#1">展现神父对偏乡的爱  科博馆法国爸爸特展</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/18/9/21/n10731002.md#1">花好月圆繁花似锦  科博馆花艺展登场</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/18/11/28/n10878663.md#1">认识早期地球  科博馆“前寒武时期”特展登场</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/18/12/21/n10923870.md#1">在澳洲布里斯本威斯汀酒店享受人生</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/18/12/26/n10933311.md#1">挽救灭绝危机  科博馆“石虎的美丽家园”特展</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/19/1/30/n11012348.md#1">展现种子之美与生命力  科博馆“百籽千寻”特展</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/19/2/27/n11075455.md#1">观察经络穴位零距离  现代14经络铜人进驻科博馆</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/4/1/n11994579.md#1">“男”丁格尔徐振哲 勇夺护理师国考榜首</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/19/n4620596.md#1">澳洲布里斯本华人聚居区房价强劲增长</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/24/n7442297.md#1">澳洲布里斯本一儿童医院爆发诺瓦克病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/4/11/n10294139.md#1">展现神父对偏乡的爱  科博馆法国爸爸特展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/21/n10731002.md#1">花好月圆繁花似锦  科博馆花艺展登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/28/n10878663.md#1">认识早期地球  科博馆“前寒武时期”特展登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/21/n10923870.md#1">在澳洲布里斯本威斯汀酒店享受人生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/26/n10933311.md#1">挽救灭绝危机  科博馆“石虎的美丽家园”特展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/30/n11012348.md#1">展现种子之美与生命力  科博馆“百籽千寻”特展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/2/27/n11075455.md#1">观察经络穴位零距离 现代14经络铜人进驻科博馆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680380.md#1">科博馆鸟瞰剧场走入历史 告别演出4月登场</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/12/n10556515.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（上）</a></li><li><a href="https://github.com/kimqea257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11383793.md#1" target="_blank">德国小伙修炼法轮功 戒毒戒烟获新生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/1/n10013328.md#1" target="_blank">文武：中共毁灭了中国社会“三权分立”的传统</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/31/n11992609.md#1">武汉“裸官”蔡莉全家猛料被曝光</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/31/n11992910.md#1">中国学者携带活病毒瓶进出美国海关</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/31/n11990338.md#1">【翻墙必看】分析：中国粮食危机或真的来了</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/31/n11992077.md#1">转发疫情消息 北京68岁退休教授遭刑拘</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/31/n11991894.md#1">学生全面到校上课 彭博社：全球或仅剩台湾</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/30/n11989488.md#1">确诊染疫两天 格莱美获奖者迪菲死于并发症</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/30/n11989376.md#1">娱乐场所开了又关 中国真实疫情引猜测</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/4/1/n11994892.md#1">疫情下 太阳马戏团裁员95% 可能申请破产</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/4/1/n11994398.md#1">防疫当前 洋女婿吴凤呼吁国际与台湾合作</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/30/n11989161.md#1">自曝失味觉嗅觉 《哈利波特》女星林奇疑染疫</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/29/n11986117.md#1">轮回辗转 身前身后事茫茫</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/26/n11978138.md#1">宿命通功能超越时空 解读过去和未来</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/12/n11935741.md#1">古代手术奇观：开颅术 胸腔术 换心术</a></li>
-<li><a href="https://github.com/kimqea257/djy/blob/master/gb/20/3/19/n11955225.md#1">他的信心犹如明灯 照亮天伦之情</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kimqea257/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kimqea257/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/24/n11136070.htm">科博馆首登“世界科学祭”  澳洲民众惊叹台湾真美</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/24/n11136070.htm">科博馆首登“世界科学祭” 澳洲民众惊叹台湾真美</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kimqea257/djy/blob/master/gb/19/3/24/n11136070.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kimqea257/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kimqea257/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kimqea257/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kimqea257/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kimqea257/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/3/24/n11136070.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
